--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -31,6 +31,7 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    gap: 10px;
 }
 
 .gpt3__navbar-links_container p,
@@ -122,6 +123,7 @@
 
     .gpt3__navbar-sign {
         display: none;
+
     }
 
     .gpt3__navbar-menu_container {
