--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,10 +1,11 @@
-.gpt3__header {
+.header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
-.gpt3__header-content {
-    flex: 1;
+
+.header-content {
+
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -13,7 +14,7 @@
     margin-right: 5rem;
 }
 
-.gpt3__header-content h1 {
+.header-content h1 {
     font-family: var(--font-family);
     font-weight: 800;
     font-size: 62px;
@@ -21,7 +22,7 @@
     letter-spacing: -0.04em;
 }
 
-.gpt3__header-content p {
+.header-content p {
     font-family: var(--font-family);
     font-weight: 400;
     font-size: 20px;
@@ -31,15 +32,14 @@
     margin-top: 1.5rem;
 }
 
-.gpt3__header-content__input {
+.header-content__input {
     width: 100%;
     margin: 2rem 0 1rem;
-
     display: flex;
     flex-direction: row;
 }
 
-.gpt3__header-content__input input {
+.header-content__input input {
     flex: 2;
     width: 100%;
     min-height: 50px;
@@ -57,8 +57,8 @@
     border-bottom-left-radius: 5px;
 }
 
-.gpt3__header-content__input button {
-    flex: 0.6;
+.header-content__input button {
+    flex: 1;
     width: 100%;
     min-height: 50px;
     font-family: var(--font-family);
@@ -75,8 +75,11 @@
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-
-.gpt3__header-content__people {
+.header-content__input button:hover {
+    background: #ea3110; 
+    border-color: #ea3110; 
+}
+.header-content__people {
     width: 100%;
     display: flex;
     justify-content: flex-start;
@@ -86,12 +89,12 @@
     margin-top: 2rem;
 }
 
-.gpt3__header-content__people img {
+.header-content__people img {
     width: 181.79px;
     height: 38px;
 }
 
-.gpt3__header-content__people p {
+.header-content__people p {
     margin: 0 0 0 1rem;
     font-family: var(--font-family);
     font-weight: 500;
@@ -101,67 +104,77 @@
     text-align: center;
 }
 
-.gpt3__header-image {
-    flex: 1;
-    display: flex;
+.header-image {
+    width:100%;
+   margin: 1rem auto 0;
+   position: relative;
     justify-content: center;
     align-items: center;
-}
+    border-radius: 5rem;
 
-.gpt3__header-image img {
-    width: 100%;
-    height: 100%;
+    .videoDiv{
+        width: 100%;
+        .video{
+            border-radius: 10rem;
+        }
+
+    }
+    .plane{
+        position: absolute;
+        width: 100%;
+        top: -10%
+    }
 }
 
 @media screen and (max-width: 1050px) {
-    .gpt3__header {
+    .header {
         flex-direction: column;
     }
 
-    .gpt3__header-content {
+    .header-content {
         margin: 0 0 3rem;
     }
 }
 
 @media screen and (max-width: 650px) {
-    .gpt3__header-content h1 {
+    .header-content h1 {
         font-size: 48px;
         line-height: 60px;
     }
 
-    .gpt3__header-content p {
+    .header-content p {
         font-size: 16px;
         line-height: 24px;
     }
     
-    .gpt3__header-content__people {
+    .header-content__people {
         flex-direction: column;
     }
 
-    .gpt3__header-content__people p {
+    .header-content__people p {
         margin: 0;
     }
 
-    .gpt3__header-content__input input,
-    .gpt3__header-content__input button {
+    .header-content__input input,
+    .header-content__input button {
         font-size: 16px;
         line-height: 24px;
     }
 }
 
 @media screen and (max-width: 490px) {
-    .gpt3__header-content h1 {
+    .header-content h1 {
         font-size: 36px;
         line-height: 48px;
     }
 
-    .gpt3__header-content p {
+    .header-content p {
         font-size: 14px;
         line-height: 24px;
     }
 
-    .gpt3__header-content__input input,
-    .gpt3__header-content__input button {
+    .header-content__input input,
+    .header-content__input button {
         font-size: 12px;
         line-height: 16px;
     }
