--- a/src/containers/damageAssesment/Damage.css
+++ b/src/containers/damageAssesment/Damage.css
@@ -3,19 +3,33 @@
   justify-content: center;
   width: 90%;
   margin: 0 auto; 
-  padding-top: 56.25%;
   position: relative;
   overflow: hidden;
+  gap: 2rem;
+  padding: 5%;
+  }
+  .damageHeader h1 {
+    font-size: 62px;
+    line-height: 75px;
+    font-family: var(--font-family);
+    font-weight: 800;
+    padding-left: 8%;
+}
+
+  .image-container {
+    flex-basis: 48%; /* Adjust the width as needed */
   }
   
-  .embed-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(115, 113, 113, 0.1); 
+  .image-container img {
+    max-width: 100%; /* Ensure images don't exceed their container's width */
   }
   
+  .caption {
+    text-align: center;
+    margin-top: 10px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    color: white;
+    margin-top: 1.5rem;
+  }
